# laboratorio_ufscar_2_ponto_0

./: docker-compose.yml  requisicoes  script_banco_com_indices.sql
laboratorio_backend/: Cargo.toml  Dockerfile
laboratorio_backend/.sqlx/: query-105896bf9fe23be4d4570636875a66ac3a4eca09650185370099f5acf450f0fa.json  query-16188e36156abb5fe7b56315f18982ea96f88df13ce9fd52de96a0e48a9f9dec.json  query-2108d2821385651399c64d6e0e68fffad70ba0e00e6601303ab73153a2bf043e.json  query-249a90238d8450cb7e976a2a056b1fc4caf33e5e429a264e54db555f90ace837.json  query-2c88234caf99d10b98dcf3493bd0b187c6874d6baf087ea77e7db2744adaea79.json  query-2dfe9c47d727cf26ed33ed18c7ac0d0e718df2ff2586ec52d160999c40188b66.json  query-2ee936d51024f692d26654fd576131ef18178d8f2917a5ef85b17fd96d051275.json  query-38f30e189e8f18348f586d50e93d986676e307707a6e03b27cf6341417ba7c38.json  query-458b880286eaf0b519bfce824c7bc0d9f30f519aaef5d014ab458974b00004d4.json  query-469af538ea5ebbc52867fbd6d1db3cfdc74cb12b08f0c4065d77c747e7c688fc.json  query-49188ea579666466c56369f0e12fa6c489a86f26ae924b1c809975858534cd2a.json  query-4bda5a8031e52ee127231b055ad3084e3ad187570a263077a41ee20c1a56436b.json  query-4d33f2dc07eb45a8b8a1895631e402db7213179d4e802d3df92bd0c98110a968.json  query-57a65131b1a73914462fefc8949effb2a898f971a4f761043d0d4e5784595b85.json  query-6294884bea5384131fb1928401e5577d44c9219f479608cad77dfde97e1cc684.json  query-709b4ede7293805d9d6f55bc2972f72886da33ead172181f7fae56a86969f935.json  query-7210146d7a9438d9db9c5209b197a745e2b2bad1083a045291bcf082a0c95f8f.json  query-7cc8764e8c3582b3d3a6d326bbf027dfd48b7c98c50778064630420d5273904c.json  (+16 more)
(+71 files in other folders)
